<resources>
    <string name="app_name">WorkitOut!</string>
    <string name="action_settings">Settings</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    //Strings for AvailabilityActivity//
    <string name="togglebutton1">ToggleButton1</string>
    <string name="togglebutton2">ToggleButton2</string>
    <string name="togglebutton3">ToggleButton3</string>
    <string name="togglebutton4">ToggleButton4</string>
    <string name="togglebutton5">ToggleButton5</string>
    <string name="togglebutton6">ToggleButton6</string>
    <string name="togglebutton7">ToggleButton7</string>
    <string name="UpdateButton">Update</string>

    //Strings for LoginActivity//
    <string name="hint_user_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_valid_username_password">Wrong User Name or Password</string>

    //Strings for navigation//
    <string name="nav_header_title">WorkItOut!</string>
    <string name="nav_header_subtitle">example@notyetdone.donna</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="text_accounts">All Accounts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //Strings for add user activity//
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_add_user">Add User</string>
    <string name="text_add_user_f_name">User First Name</string>
    <string name="text_add_user_l_name">User Last Name</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="success_message">Add User Successful</string>

    //Strings for database
    <string name="database_name">WorkItOut.db</string>
    <string name="table_user">user</string>
    <string name="column_user_id">user_id</string>
    <string name="column_user_f_name">user_f_name</string>
    <string name="column_user_l_name">user_l_name</string>
    <string name="column_user_name">column_user_name</string>
    <string name="column_user_password">user_password</string>
    <string name="column_user_email_address">user_email_address</string>
    <string name="column_user_home_address">user_home_address</string>
    <string name="column_user_home_phone">user_home_phone</string>
    <string name="column_user_mobile_phone">user_mobile_phone</string>
    <string name="column_user_type">user_type</string>
    <string name="column_employee_number">employee_number</string>
    <string name="column_contract_type">contract_type</string>
    <string name="column_logged_in">logged_in</string>
    <string name="column_monday_avail">monday_avail</string>
    <string name="column_tuesday_avail">tuesday_avail</string>
    <string name="column_wednesday_avail">wednesday_avail</string>
    <string name="column_thursday_avail">thursday_avail</string>
    <string name="column_friday_avail">friday_avail</string>
    <string name="column_saturday_avail">saturday_avail</string>
    <string name="column_sunday_avail">sunday_avail</string>

</resources>
